Fiscal Button Changes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -147,9 +147,9 @@ section {
   padding: 6rem;
 }
 
-.fiscaltitle {
-  padding: 6rem;
-}
+//.fiscaltitle {
+//  padding: 6rem;
+//}
 
 .row {
   display: flex;
